# mview

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.gpu.yml  docker-compose.yml  go2rtc.yaml  install.sh  sentinel.yml
api/: Dockerfile  __init__.py  config.py  database.py  main.py  requirements.txt
api/models/: ai.py  camera.py  user.py
api/routers/: auth.py  cameras.py  events.py  maps.py  recordings.py  system.py  users.py
api/schemas/: camera.py
api/services/: event_processor.py  local_core.py  notification_service.py  onvif_service.py  recorder.py  storage_tier_migration.py
detector/: Dockerfile  accelerator.py  alpr.py  detector.py  face_recognition.py  motion.py  requirements.txt  semantic_search.py  zones.py
docs/: nginx-proxy.md
integrations/homeassistant/: mqtt_discovery.py
mobile/: App.tsx  eas.json  package-lock.json
mobile/src/screens/: LiveView.tsx  Playback.tsx
recorder/: Cargo.toml  Dockerfile
recorder/src/: main.rs  retention.rs  segment.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: PTZControls.tsx  TimelineBar.tsx  VideoPlayer.tsx
web/src/lib/: endpoints.ts
web/src/pages/: Dashboard.tsx  Events.tsx  LiveView.tsx  Login.tsx  MapView.tsx  Playback.tsx  Settings.tsx  Wallboard.tsx
