[package]
name = "mview-recorder"
version = "0.1.0"
edition = "2021"
description = "High-performance zero-copy NVR recording engine for mView Sentinel"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rumqttc = "0.24"
ffmpeg-next = "6.1"
anyhow = "1.0"
async-stream = "0.3"
futures = "0.3"
